@@ -62,6 +62,11 @@ class FilterCollections(filter_base.FilterBase):
              "tooltip": f"Share collection '{entry['name']}' with a user",
              "function": partial(self.share_item.emit,
                                  "collection", entry["name"])},
+            {"name": "edit",
+             "icon": "pencil",
+             "tooltip": f"Modify collection '{entry['name']}'",
+             "function": partial(self.edit_item.emit,
+                                 "collection", entry["name"])},
             {"name": "view-online",
              "icon": "eye",
              "tooltip": f"view collection {entry['name']} online",
@@ -99,6 +104,11 @@ class FilterDatasets(filter_base.FilterBase):
              "tooltip": f"Share dataset '{entry['name']}' with a user",
              "function": partial(self.share_item.emit,
                                  "dataset", entry["name"])},
+            {"name": "remove-from-collection",
+             "icon": "trash-can-arrow-up",
+             "tooltip": f"Remove dataset '{entry['name']}' from collection",
+             "function": partial(self.remove_item.emit,
+                                 "dataset", entry["id"])},
             {"name": "view-online",
              "icon": "eye",
              "tooltip": f"view dataset {entry['name']} online",
