@@ -63,6 +63,7 @@ icons = {
         "hourglass",
         "info",
         "magnifying-glass",
+        "pencil",
         "people-arrows",
         "people-carry",
         "puzzle-piece",
@@ -75,6 +76,7 @@ icons = {
         "tag",
         "trash",
         "trash-alt",
+        "trash-can-arrow-up",
         "undo",
         "upload",
         "user",
