@@ -1,5 +1,6 @@
 0.19.0
  - feat: share dialog for collections and datasets
+ - feat: implement button to remove datasets from a collection (#46)
  - fix: remember ETag of uploaded resources (#80)
  - fix: create a new group if when no group available to add datasets to
  - fix: cache download resource file size
